--- a/global.css
+++ b/global.css
@@ -41,6 +41,10 @@ header {
    text-align: center;
    float: left;
    width: 100%;
+   border-bottom: 10px solid #68a424;
+   background-color: #aaaaaa;
+   padding-bottom: 0.5em;
+   padding-top: 0.5em;
 }
 header p {
    text-align: center;
@@ -61,4 +65,9 @@ h3 {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    font-size: 1.1em;
+}
+body {
+   background-color: #f5f5f5;
+   font-family: Arial, Helvetica, sans-serif;
+   color: #000000;
 }
