--- a/global.css
+++ b/global.css
@@ -70,4 +70,6 @@ body {
    background-color: #f5f5f5;
    font-family: Arial, Helvetica, sans-serif;
    color: #000000;
+   background-image: url(resources/images/pattern.png);
+   background-repeat: repeat;
 }
