--- a/global.css
+++ b/global.css
@@ -66,7 +66,7 @@ h3 {
    margin-bottom: 0.5em;
    font-size: 1.1em;
 }
-body {
+#mainContent {
    background-color: #3b3b3b;
    font-family: Arial, Helvetica, sans-serif;
    color: #9a9a9a;
