--- a/global.css
+++ b/global.css
@@ -74,3 +74,7 @@ body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #111111;
 }
+a {
+   color: #0000ff;
+   text-decoration: none;
+}
