--- a/global.css
+++ b/global.css
@@ -29,7 +29,6 @@ footer {
 	text-align: center;
 	margin-top: 3em;
 	border-top: 1px solid #68a424;
-	padding-top: 1em;
 	padding-bottom: 1em;
 	color: #68a424;
 	font-style: italic;
@@ -75,6 +74,7 @@ h3 {
 body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #040404;
+   padding: 1.5em;
 }
 a {
    color: #0000ff;
